# openremise.github.io

./: .licenserc.json  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.github/workflows/: docs.yml  static.yml
docs/: CMakeLists.txt  DoxygenLayout.xml  ZIMO_Interface.inf  case_12mm.dxf  custom.css  footer.html  header.html  install_the_firmware.webm
src/: doxygen.hpp
